# py-organizer

./: README.md  makefile  pyproject.toml
.github/workflows/: CI.yml
py_organizer/cli/: cli.py
py_organizer/organizer/: __init__.py  mover.py
py_organizer/scripts/: __init__.py  py_organizer.py
tests/: test_cli.py  test_mover.py
