[tool.poetry]
name = "py-organazer"
version = "0.1.0"
description = "CLI utilite for organizing files in folder."
authors = ["emp7yhead <artyomkropp@gmail.com>"]
packages = [
    { include = "py_organizer" }
]

[tool.poetry.scripts]
py-organizer = "py_organizer.scripts.py_organizer:main"

[tool.poetry.dependencies]
python = "^3.9"
alive-progress = "^2.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
wemake-python-styleguide = "^0.16.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
